# TpSQL

./: .gitignor  .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  TpSQL  TpSQL.cbp  a.out  cmake_install.cmake  library.h  main.cpp  techonparkproject  test.csv  testSQL.csv
.cmake/api/v1/reply/: cache-v2-757d76c440b786da9db7.json  cmakeFiles-v1-3cec9171d4b318ad6350.json  codemodel-v2-ec2af39552700e5398ea.json  index-2022-05-21T17-47-24-0591.json  target-TpSQL-Debug-107c4222d2e355d96769.json
include/: auxiliary_func.h  csv_reader.h
project/: data.txt
project/include/: Table.h  Tcmd.h  auxiliary_func.h
project/src/: Table.cpp  Tcmd.cpp  auxiliary_func.cpp  main.cpp
project/tables/: test.csv
src/: auxiliary_func.cpp
